--- a/newinstall/locales/en/plugin.local_records.xml
+++ b/newinstall/locales/en/plugin.local_records.xml
@@ -9,10 +9,10 @@
 
 
 	<!-- record messages -->
-	<record_new>{#server}» {#highlite}{1}{#record} secured his/her {#rank}{2}{#record}. Local Record! Time: {#highlite}{3}{#record} ({#rank}{4} {#highlite}{5}{#record})</record_new>
-	<record_equal>{#server}» {#highlite}{1}{#record} equaled his/her {#rank}{2}{#record}. Local Record! Time: {#highlite}{3}</record_equal>
-	<record_new_rank>{#server}» {#highlite}{1}{#record} gained the {#rank}{2}{#record}. Local Record! Time: {#highlite}{3}{#record} ({#rank}{4} {#highlite}{5}{#record})</record_new_rank>
-	<record_first>{#server}» {#highlite}{1}{#record} claimed the {#rank}{2}{#record}. Local Record! Time: {#highlite}{3}</record_first>
+	<record_new>{#server}» {#highlite}{1}{#record} secured his/her {#rank}{2}{#record}. Local Record! {#highlite}⏰ {3}{#record} ({#rank}{4} {#highlite}{5}{#record})</record_new>
+	<record_equal>{#server}» {#highlite}{1}{#record} equaled his/her {#rank}{2}{#record}. Local Record! {#highlite}⏰ {3}</record_equal>
+	<record_new_rank>{#server}» {#highlite}{1}{#record} gained the {#rank}{2}{#record}. Local Record! {#highlite}⏰ {3}{#record} ({#rank}{4} {#highlite}{5}{#record})</record_new_rank>
+	<record_first>{#server}» {#highlite}{1}{#record} claimed the {#rank}{2}{#record}. Local Record! {#highlite}⏰ {3}</record_first>
 	<record_current>{#server}» {#message}Current record on {#highlite}{1}{#message} is {#highlite}{2}{#message} by {#highlite}{3}</record_current>
 	<record_none>{#server}» {#message}Currently no record on [{#highlite}{1}{#message}] ...</record_none>
 
